src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Delivery_Date__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_date__c</fullName>
        <label>Actual Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_hrs__c</fullName>
        <formula>Analysis_Actual__c  +  CUT_Actual__c  +  Deployment_Actual__c  +  Documentation_Actual__c  +  Review_Testing_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysis_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Analysis Actual Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysis_Estimate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Analysis Estimated Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applies_To_Type__c</fullName>
        <label>Applies To Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applies_To__c</fullName>
        <label>Applies To</label>
        <picklist>
            <picklistValues>
                <fullName>HR System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Approval_Live_Test_BA2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Approval Live Test (BA2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Approval_UAT_BA1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Approval UAT (BA1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Requirements_Document_BRD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Requirements Document (BRD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Test_Case_BTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Test Case (BTC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CUT_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coding Actual Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUT_Estimated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coding Estimated Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Review_CoR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Review (CoR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>1-Critical/Run Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Mandatory/Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-High/$ Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Medium/Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Low/Nice to have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <formula>YEAR( DATEVALUE( Created_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Planned Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deployment Actual Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Estimated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deployment Estimated Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Documentation Actual Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documentation_Estimated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Documentation Estimated Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_hours_ams__c</fullName>
        <label>Estimated hours</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_hrs__c</fullName>
        <formula>Analysis_Estimate__c  +  CUT_Estimated__c  +  Deployment_Estimated__c  +  Documentation_Estimated__c  +  Review_Testing_Estimated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Analysis_IA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact Analysis (IA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident_No_for_Search__c</fullName>
        <label>Incident #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <label>Incident #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Owner_Account__c</fullName>
        <label>Owner Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_End_date__c</fullName>
        <label>Planned End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_date__c</fullName>
        <label>Planned Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <label>Ref #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Checklist_RC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Checklist (RC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Notes_RN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Notes (RN)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reported_By_Department__c</fullName>
        <label>Reported By - Department</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By_Sub_Department__c</fullName>
        <label>Reported By - Sub Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <label>Reported By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <label>Reported Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_for_Change_RFC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request for Change (RFC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Testing_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Review &amp; Peer Testing Actual Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Testing_Estimated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Review &amp; Peer Testing Estimated Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rework_Actual_Hrs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rework Actual Hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rework_Estimated_hrs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rework Estimated hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis_RCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Root Cause Analysis (RCA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>High - Run business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low - Important but not urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium - Efficiency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reported</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Business User Clarification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding Complete / System Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending User Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_reproduce__c</fullName>
        <label>Steps to reproduce</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Outage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Outage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Since_Creation__c</fullName>
        <formula>TODAY()  -  DATEVALUE( Created_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Since_Status_Date__c</fullName>
        <formula>TODAY()  -  DATEVALUE(  Status_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Status Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Case_UTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Test Case (UTC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Testing_Actual_hrs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Testing Actual hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Testing_Estimated_hrs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Testing Estimated hrs</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Incident__c</columns>
        <columns>Summary__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Status_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Incidents</fullName>
        <columns>Incident__c</columns>
        <columns>Summary__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Open Incidents</label>
    </listViews>
    <listViews>
        <fullName>My_Teams_Open_Incidents</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Team&apos;s Open Incidents</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Actual_End_date_must_be_greater_than_str</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Actual_End_Date__c  &lt;  Actual_Start_date__c , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be less than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Planned_End_date__c  &lt;  Planned_Start_date__c , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Planned_End_date__c</errorDisplayField>
        <errorMessage>End Date cannot be less than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimates_cannot_be_negative_CUT</fullName>
        <active>true</active>
        <errorConditionFormula>IF( CUT_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>CUT_Estimated__c</errorDisplayField>
        <errorMessage>Estimates cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimates_cannot_be_negative_analysis</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Analysis_Estimate__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Analysis_Estimate__c</errorDisplayField>
        <errorMessage>Estimates cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimates_cannot_be_negative_deploy</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Deployment_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Deployment_Estimated__c</errorDisplayField>
        <errorMessage>Estimates cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimates_cannot_be_negative_docum</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Documentation_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Documentation_Estimated__c</errorDisplayField>
        <errorMessage>Estimates cannot be negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimates_cannot_be_negative_review</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Review_Testing_Estimated__c &lt; 0, TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Review_Testing_Estimated__c</errorDisplayField>
        <errorMessage>Estimates cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>